manifests/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-deployment
  labels:
    app: ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha
  template:
    metadata:
      labels:
        app: ha
    spec:
      containers:
        - name: ha
          image: ha-container-image
          securityContext:
            runAsUser: 1006
            runAsGroup: 1006
          ports:
            - containerPort: 8123
          resources:
            requests:
              memory: "380Mi"
            limits:
              memory: "800Mi"
          volumeMounts:
            - name: ha-pvc
              mountPath: /config
      volumes:
        - name: ha-pvc
          persistentVolumeClaim:
            claimName: ha-pvc
