manifests/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
spec:
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
  selector:
    app: ha
