manifests/apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ha.blunders.me
    secretName: ha-secret-tls
  rules:
  - host: ha.blunders.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ha-service
            port:
              number: 80
