manifests/apps/home-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha
spec:
  hostnames:
    - ha.blunders.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: ha-service
          port: 80
